--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ dependencies {
     testImplementation libs.junit.jupiter
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+    implementation group: 'org.json', name: 'json', version: '20090211' 
     // This dependency is used by the application.
     implementation libs.guava
-}
 
+}
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
@@ -34,7 +34,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'control.Test'
+    mainClass = 'control.WortTrainerControl'
 }
 
 tasks.named('test') {
